--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,5 +1,107 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-        <%= link_to "MyTerior", root_path, class:"navbar_brand navbar_mainLogo" %>
+  <div class="container-fluid ">
+     <a class="navbar-brand" href="/">
+       <%= image_tag 'MyTerior_Logo', alt: 'Logo', height: '70' %>
+      <span class="navbar__brand navbar__mainLogo">MyTerior</span>
+     </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-md-auto">
+       <%#if admin_signed_in? %>
+        <!--後で解除する-->
+        <!--<li>-->
+        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
+        <!--  管理者ルール-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+        
+        <!--<li>-->
+        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
+        <!--  投稿管理-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
+        <!--　ユーザー管理-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+        
+        <!--<li>-->
+        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
+        <!--  ログアウト-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+       <%# elsif customer_signed_in? %>
+       <!--後ほど解除-->
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          ホーム
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          投稿一覧
+          <% end %>
+        </li>
+        
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          チャット
+          <% end %>
+        </li>
+        
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          通知
+          <% end %>
+        </li>
+        
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          いいね一覧
+          <% end %>
+        </li>
+        
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+           <i class="fa-solid fa-house"></i>
+          <% end %>
+        </li> 
+        
+       <%# else %>
+        <!--<li>
+          <%#= link_to "#", class: 'nav-link text-dark' do %>
+            ホーム
+          <%# end %>
+        </li>
+        
+        <li>
+          <%#= link_to "#",class: 'nav-link text-dark' do %>
+            About
+          <%# end %>
+        </li>
+        
+        <li>
+          <%#= link_to "#",class: 'nav-link text-dark' do %>
+            投稿一覧
+          <%# end %>
+        </li>
+        <li>
+          <%#= link_to "#",class: 'nav-link text-dark' do %>
+            ログイン
+          <%# end %>
+        </li>
+        
+        <li>
+          <%#= link_to "#",class: 'nav-link text-dark' do %>
+            新規登録
+          <%# end %>
+        </li>-->
+        
+       <%# end %>
+      </ul>
     </div>
+  </div>
 </nav>
