--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,2 +1,35 @@
-<h1>User::Homes#top</h1>
-<p>Find me in app/views/user/homes/top.html.erb</p>
+<!--ゲストログイン・新規登録・ログインの欄を作成する-->
+<header>
+<div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-md">
+          <%= image_tag 'MyTerior_header.png',class: "img-responsive" %>
+      </div>
+    </div>
+</div>
+</header>
+
+<!--後ほどレイアウトで整える-->
+ <div class="btn-wrapper col-5 mx-auto">
+    <div class="row">
+         <%= link_to new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" do %>
+         ログインはこちら 
+         <% end %>
+    </div>
+    
+    <div class="row">
+         <%= link_to new_user_registration_path, class: "btn btn-success btn-sm btn-block mb-3 sign_up " do %>
+         新規登録はこちら
+         <% end %>
+    </div>
+  
+    <div class="row">
+         <%= link_to users_guest_sign_in_path, class: "btn btn-success btn-sm btn-block mb-3 sign_up " do %>
+         ゲストログインはこちら
+         <% end %>
+         <!--ユーザーのページを作ったら、マイページ編集できないようにするカリキュラムゲストログインのところで調べられる-->
+    </div>
+    
+ </div>
+    
+  
