--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,2 +1,14 @@
-<h1>User::Posts#new</h1>
-<p>Find me in app/views/user/posts/new.html.erb</p>
+<h1>画像投稿フォーム</h1>
+<%= form_with model: @post, url: user_posts_path do |f| %>
+  <h4>画像投稿</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+  
+  <h4>説明</h4>
+  <%= f.text_area :caption %>
+  
+  <h4>間取り</h4>
+  
+  <h4>タグ</h4>
+  
+  <%= f.submit '投稿を確認する'%>
+<% end %>
