--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,7 +1,12 @@
-<h2>Sign up</h2>
+<h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
+
+　<div class="field">
+  　<%= f.label :name %><br>
+  　<%= f.text_field :name %>
+　</div>
 
   <div class="field">
     <%= f.label :email %><br />
