--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,13 +1,4 @@
-<!--ゲストログイン・新規登録・ログインの欄を作成する-->
-<header>
-<div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-md">
-          <%= image_tag 'MyTerior_header.png',class: "img-responsive" %>
-      </div>
-    </div>
-</div>
-</header>
+<%= render  'partial/header' %>
 
 <!--後ほどレイアウトで整える-->
  <div class="btn-wrapper col-5 mx-auto">
