--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,9 @@
 @use '~bootstrap/scss/bootstrap';
 
 @import "layouts/navbar";
+
+// @import "common";
+
+// @import "user/devise"; 
+
+@import "users/show";
