--- a/app/views/partial/_header.html.erb
+++ b/app/views/partial/_header.html.erb
@@ -1,3 +1,9 @@
-<div class="container">
-  <%= image_tag 'MyTerio_header.png', class: 'hoge' %>
+<!--ゲストログイン・新規登録・ログインの欄を作成する-->
+<header>
+<div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-md myterior_header">
+      </div>
+    </div>
 </div>
+</header>
