--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,47 +1,46 @@
 <nav class="navbar navbar-expand-lg navbar-light">
+   <div class="profile-icon"></div>
   <div class="container-fluid ">
      <a class="navbar-brand" href="/">
-       <%= image_tag 'MyTerior_Logo', alt: 'Logo', height: '70' %>
-      <span class="navbar__brand navbar__mainLogo">MyTerior</span>
+       <%#= image_tag 'MyTerior_header.png', alt: 'Logo' ,height: '70' %>
+      <span class="navbar__brand navbar__mainLogo" style="bold">MyTerior</span>
      </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-md-auto">
-       <%#if admin_signed_in? %>
-        <!--後で解除する-->
-        <!--<li>-->
-        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
-        <!--  管理者ルール-->
-        <!--  <%# end %>-->
-        <!--</li>-->
-        
-        <!--<li>-->
-        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
-        <!--  投稿管理-->
-        <!--  <%# end %>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
-        <!--　ユーザー管理-->
-        <!--  <%# end %>-->
-        <!--</li>-->
-        
-        <!--<li>-->
-        <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
-        <!--  ログアウト-->
-        <!--  <%# end %>-->
-        <!--</li>-->
-       <%# elsif customer_signed_in? %>
-       <!--後ほど解除-->
+      <ul class="navbar-nav mr-auto">
+       <%if admin_signed_in? %>
         <li>
           <%= link_to "#", class: 'nav-link text-dark' do %>
-          ホーム
+          管理者ルール
+          <% end %>
+        </li>
+        
+        <li>
+          <%= link_to "#", class: 'nav-link text-dark' do %>
+          投稿管理
           <% end %>
         </li>
         <li>
           <%= link_to "#", class: 'nav-link text-dark' do %>
+        　ユーザー管理
+          <% end %>
+        </li>
+        
+        <li>
+        <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
+          ログアウト
+          <% end %>
+        </li>
+       <% elsif user_signed_in? %>
+        <li>
+          <%= link_to home_path, class: 'nav-link text-dark' do %>
+          ホーム
+          <% end %>
+        </li>
+        <li>
+          <%= link_to user_posts_path, class: 'nav-link text-dark' do %>
           投稿一覧
           <% end %>
         </li>
@@ -70,38 +69,38 @@
           <% end %>
         </li> 
         
-       <%# else %>
-        <!--<li>
-          <%#= link_to "#", class: 'nav-link text-dark' do %>
-            ホーム
-          <%# end %>
-        </li>
-        
+       <% else %>
         <li>
-          <%#= link_to "#",class: 'nav-link text-dark' do %>
+          <%= link_to about_path,class: 'nav-link text-dark' do %>
             About
-          <%# end %>
+          <% end %>
         </li>
         
         <li>
-          <%#= link_to "#",class: 'nav-link text-dark' do %>
+          <%= link_to user_posts_path, class: 'nav-link text-dark' do %>
             投稿一覧
-          <%# end %>
+          <% end %>
         </li>
         <li>
-          <%#= link_to "#",class: 'nav-link text-dark' do %>
+          <%= link_to new_user_session_path,class: 'nav-link text-dark' do %>
             ログイン
-          <%# end %>
+          <% end %>
         </li>
         
         <li>
-          <%#= link_to "#",class: 'nav-link text-dark' do %>
+          <%= link_to new_user_registration_path,class: 'nav-link text-dark' do %>
             新規登録
-          <%# end %>
-        </li>-->
+          <% end %>
+        </li>
         
-       <%# end %>
+       <% end %>
       </ul>
+      <% if user_signed_in? %>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">🔍</button>
+        </form>
+      <% end %>
     </div>
   </div>
 </nav>
