--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,8 +1,8 @@
 <header>
 <div class="container-fluid">
     <div class="row text-center">
-      <div class="col-md">
-          <%= image_tag 'MyTerior_header.png', height: '220' %>
+      <div class="col-md myterior_header">
+          <%#= image_tag 'MyTerior_header.png', height: '220' %>
       </div>
     </div>
 </div>
