--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,2 +1,10 @@
-<h1>User::Posts#index</h1>
-<p>Find me in app/views/user/posts/index.html.erb</p>
+<% @post.each do |post| %>
+  <!--<div>-->
+  <!--  <p>ユーザーのアイコン</p><p>ユーザー名</p>-->
+  <!--</div>-->
+ <% if @post.image.attached? %>
+  <% @post.image.each do |image| %>
+    <%= image_tag image.variant(resize: '500x500') %>
+  <% end %>
+<% end %>
+<% end %>
