--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,2 +1,16 @@
-<h1>User::Posts#show</h1>
-<p>Find me in app/views/user/posts/show.html.erb</p>
+<div class="container">
+    <div class="icon-bar">
+        <p>icon_image</p>
+        <p>ユーザー名</p>
+    </div>
+    <div>
+     <%= image_tag @post.get_image %>
+    </div>
+    <div>
+     <%= @post.caption %>
+    </div>
+    <div>
+     <p>投稿日:<%= @post.created_at.strftime('%Y/%m/%d') %></p>
+    </div>
+    
+</div>
