マイページ作成

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,9 +1,6 @@
 @use '~bootstrap/scss/bootstrap';
 
 @import "layouts/navbar";
-
-// @import "common";
-
-// @import "user/devise"; 
-
+@import "common";
+@import "users/devise"; 
 @import "users/show";
