--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
     <!--<nav>...</nav>の間のコード-->
     <%= render 'partial/navbar' %>
     
+   <div class="bg">
    <%= yield %>
-
+   </div>
    
   </body>
 </html>
