--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,7 +1,12 @@
-<%= render  'partial/header' %>
-
+<%#= render  'partial/header' %>
 <!--後ほどレイアウトで整える-->
- <div class="btn-wrapper col-5 mx-auto">
+<div class="main">
+  <div class="card devise-card">
+    <div class="form-wrap">
+      <div class="form-group text-center">
+        <h2 class="logo-img mx-auto"></h2>
+      </div>
+   <div class="btn-wrapper col-12 mx-auto">
     <div class="row">
          <%= link_to new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" do %>
          ログインはこちら 
@@ -21,6 +26,9 @@
          <!--ユーザーのページを作ったら、マイページ編集できないようにするカリキュラムゲストログインのところで調べられる-->
     </div>
     
+   </div>
+  </div>
  </div>
+</div>
     
   
