--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,14 +1,18 @@
-<h1>画像投稿フォーム</h1>
-<%= form_with model: @post, url: user_posts_path do |f| %>
+<% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました。
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
 
-  <%= f.file_field :images, multiple: true %>
-  
+
+<%= form_with model: @post, url: user_posts_path do |f| %>
   <%= f.label :caption %>
-  <%= f.text_area :caption %>
-  
-  <span>間取り<span>
-  
-  <span>タグ<span>
-  
-  <%= f.submit '投稿を確認する'%>
+  <%= f.text_field :caption %>
+  <%= f.fields_for :photos do |i| %>
+    <%= i.file_field :image %>
+  <% end %>
+  <%= f.submit "投稿", class: "btn btn-primary" %>
 <% end %>
