--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -2,8 +2,7 @@
   <div class="row">
     <div class="col-md-8 mx-auto">
       <div class="profile-form-wrap">
-        <%#= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true, method: :patch do |f| %>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true, method: :patch do |f| %>
           <div class="form-group">
             <%= f.label :name, "名前" %>
             <%= f.text_field :name, autofocus: true, class: "form-control" %>
@@ -12,6 +11,16 @@
           <div class="form-group">
             <%= f.label :email, "メールアドレス" %>
             <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password, "パスワード" %>
+            <%= f.password_field :password, autofocus: "off", class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation, "パスワードの確認" %>
+            <%= f.password_field :password_confirmation, autofocus: "off", class: "form-control" %>
           </div>
 
           <%= f.submit "変更する", class: "btn btn-primary" %>
