--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light">
    <div class="profile-icon"></div>
   <div class="container-fluid ">
-     <a class="navbar-brand" href="/">
+     <%= link_to posts_path, class: "navbar-brand" do %>
       <span class="navbar__brand navbar__mainLogo" style=""> <%= image_tag 'MyTerior_Header2.png', alt: 'Logo', height: '70'%></span>
-     </a> 
+     <% end %> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,7 +39,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to user_posts_path, class: 'nav-link text-dark' do %>
+          <%= link_to posts_path, class: 'nav-link text-dark' do %>
           投稿一覧
           <% end %>
         </li>
@@ -76,7 +76,7 @@
         </li>
         
         <li>
-          <%= link_to user_posts_path, class: 'nav-link text-dark' do %>
+          <%= link_to posts_path, class: 'nav-link text-dark' do %>
             投稿一覧
           <% end %>
         </li>
@@ -95,6 +95,13 @@
        <% end %>
       </ul>
       <% if user_signed_in? %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <ul class="navbar-nav ml-md-auto align-items-center">
+          <li>
+          <%= link_to "投稿", new_post_path, class: 'btn btn-primary' %>
+          </li>
+         </ul>
+        </div>
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">🔍</button>
