--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,18 +1,29 @@
-<% if @post.errors.any? %>
-  <%= @post.errors.count %>件のエラーが発生しました。
-    <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-<% end %>
+<div class="d-flex flex-column align-items-center mt-3">
+  <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
+    <div class="box">
+      <div class="box-header">
+        <h2>インテリアを紹介しよう</h2>
+      </div>
+      <div class="box-body">
+        <%= form_with model: @post, url: posts_path, class: "upload-images p-0 border-0" do |f| %>
+         <div class="mb-3">
 
+            <%= f.fields_for :photos do |i| %>
+              <%= i.file_field :image %>
+            <% end %>
 
-<%= form_with model: @post, url: user_posts_path do |f| %>
-  <%= f.label :caption %>
-  <%= f.text_field :caption %>
-  <%= f.fields_for :photos do |i| %>
-    <%= i.file_field :image %>
-  <% end %>
-  <%= f.submit "投稿", class: "btn btn-primary" %>
-<% end %>
+          </div>
+          <div class="form-group row mt-2">
+            <div class="col-auto pr-0">
+              <%= image_tag avatar_url(current_user), class: "post-profile-icon" %>
+            </div>
+            <div class="col pl-0">
+              <%= f.text_field :caption, class: "form-control border-0", placeholder: "キャプションを書く" %>
+            </div>
+          </div>
+          <%= f.submit "投稿する", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
