--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -39,3 +39,20 @@
     </div>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-md-3">
+            <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
+              <%= link_to post_path(post) do %>
+              <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
+              <% end %>
+            </div>
+          </div>
+         <% end %>
+      </div>
+    </div>
+
+      
+
