ユーザページとマイページを統一完了（記述も変更）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
     <!--<nav>...</nav>の間のコード-->
    <%= render 'partial/navbar' %>
-    
+   <%= flash[:notice] %>
    <%= yield %>
    
   </body>
