--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,24 +1,34 @@
-<main>
-<div class="container">
+<main class="container-fluid">
   <div class="row">
+    <!-- サイドバー -->
     <div class="col-md-3">
-  aaa
+      <div class="sidebar bg-light" style="padding: 10px; border-radius: 5px;">
+        <h4>サイドバー</h4>
+        <!-- サイドバーの内容をここに追加 -->
+        <ul class="list-group">
+          <li class="list-group-item">リンク1</li>
+          <li class="list-group-item">リンク2</li>
+          <li class="list-group-item">リンク3</li>
+          <!-- さらにリンクを追加 -->
+        </ul>
+      </div>
+    </div>
+    
+    <!-- メインコンテンツ -->
+    <div class="col-md-9">
+      <div class="container">
+        <div class="row">
+          <% @posts.each do |post| %>
+            <div class="col-md-3">
+              <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
+                <%= link_to(post_path(post)) do %>
+                  <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
-  
-  <div class="row">
-<% @posts.each do |post| %>
-  <div class="col-md-3">
-    <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
-      <%= link_to(post_path(post)) do %>
-        <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
-      <% end %>
-    </div>
-  </div>
-<% end %>
-  </div>
-  <!--<div class="d-flex justify-content-center">-->
-  <!--  <%#= paginate @post, class: 'pagination' %>-->
-  <!-- </div>-->
-</div>
 </main>
