--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -8,7 +8,7 @@
         <h1><%= @user.name %></h1>
         <!--プロフィール編集権限-->
         <% if @user == current_user %>
-        <%= link_to "プロフィールを編集", edit_user_registration_path, class: "btn btn-outline-dark common-btn edit-profile-btn" %>
+        <%= link_to "プロフィールを編集", edit_user_path, class: "btn btn-outline-dark common-btn edit-profile-btn" %>
         <button type="button" class="setting" data-toggle="modal" data-target="#exampleModal"></button>
         <% end %>
         
