--- a/app/javascript/stylesheets/layouts/navbar.scss
+++ b/app/javascript/stylesheets/layouts/navbar.scss
@@ -6,7 +6,7 @@
 //       }
       
 .myterior_header{
-    background-image: url("MyTerior_header.png");
+    background-image: url("../images/MyTerior_header.png");
       height: 400px; 
       width: 100%;
       background-size: contain;
