--- a/app/javascript/stylesheets/users/devise.scss
+++ b/app/javascript/stylesheets/users/devise.scss
@@ -20,7 +20,7 @@
 }
 
 .logo-img {
-  background-image: url("MyTerior_Header2.png");
+  background-image: image-url("MyTerior_Header2.png");
   background-repeat: no-repeat;
   height: 56px;
   width: 100%;
