--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,13 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light">
    <div class="profile-icon"></div>
-  <div class="container-fluid ">
-     <%= link_to posts_path, class: "navbar-brand" do %>
-      <span class="navbar__brand navbar__mainLogo" style=""> <%= image_tag 'MyTerior_Header2.png', alt: 'Logo', height: '70'%></span>
+  <div class="container-fluid h-100">
+     <%= link_to posts_path, class: "navbar-brand h-100" do %>
+      <%= image_tag 'MyTerior_Header2.png', alt: 'Logo', height: '100%'%></span>
      <% end %> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <% if user_signed_in? %>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">🔍</button>
+        </form>
+      <% end %>
+      
       <ul class="navbar-nav mr-auto">
        <%if admin_signed_in? %>
         <li>
@@ -94,19 +101,6 @@
         
        <% end %>
       </ul>
-      <% if user_signed_in? %>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ml-md-auto align-items-center">
-          <li>
-          <%= link_to "投稿", new_post_path, class: 'btn btn-primary' %>
-          </li>
-         </ul>
-        </div>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">🔍</button>
-        </form>
-      <% end %>
     </div>
   </div>
 </nav>
