--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column align-items-center mt-3">
   <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
-    <div class="box">
-      <div class="box-header">
+    <div class="card">
+      <div class="card-header">
         <h2>インテリアを紹介しよう</h2>
       </div>
-      <div class="box-body">
+      <div class="card-body">
         <%= form_with model: @post, url: posts_path, class: "upload-images p-0 border-0" do |f| %>
          <div class="mb-3">
 
@@ -13,9 +13,10 @@
             <% end %>
 
           </div>
+          
           <div class="form-group row mt-2">
             <div class="col-auto pr-0">
-              <%= image_tag avatar_url(current_user), class: "post-profile-icon" %>
+              <%= image_tag current_user.get_profile_photo, class: "post-profile-icon" %>
             </div>
             <div class="col pl-0">
               <%= f.text_field :caption, class: "form-control border-0", placeholder: "キャプションを書く" %>
@@ -23,6 +24,8 @@
           </div>
           <%= f.submit "投稿する", class: "btn btn-primary" %>
         <% end %>
+        
+        
       </div>
     </div>
   </div>
