--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,11 +1,19 @@
 <div class="container">
-  <div class="col-md-8 col-md-2 mx-auto">
+   <div class="row">
+    <!-- サイドバー -->
+  <aside class="col-md-3 col-12">
+     <%= render 'user/users/info', user: current_user %>
+  </aside>
+  
+  
+  <main class="col-md-9 col-12 mx-auto">
     <div class="card-wrap">
       <div class="card">
         <div class="card-header align-items-center d-flex">
           <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
-            <%= image_tag avatar_url(@post.user), class: "post-profile-icon" %>
+             <%= image_tag @post.user.get_profile_photo,class: "post-profile-icon"%>
           <% end %>
+          
           <%= link_to user_path(@post.user), class: "black-color no-text-decoration",
             title: @post.user.name do %>
             <strong><%= @post.user.name %></strong>
@@ -67,5 +75,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </div>
