--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -3,6 +3,12 @@
     <div class="col-md-8 mx-auto">
       <div class="profile-form-wrap">
         <%= form_with model: @user, url: user_path(@user), method: :patch, local: true do |f| %>
+        
+          <div class="form-group">
+            <%= f.label :profile_photo, "プロフィール画像" %>
+            <%= f.file_field :profile_photo, accept: "image/*" %>
+          </div>
+          
           <div class="form-group">
             <%= f.label :name, "名前" %>
             <%= f.text_field :name, autofocus: true, class: "form-control" %>
@@ -11,6 +17,21 @@
           <div class="form-group">
             <%= f.label :email, "メールアドレス" %>
             <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          </div>
+          
+          <div class="form-group">
+            <%= f.label :introduction, "bio" %>
+            <%= f.text_area :introduction, autofocus: true, class: "form-control" %>
+          </div>
+          
+           <div class="form-group">
+            <%= f.label :password, "パスワード" %>
+            <%= f.password_field :password, autofocus: "off", class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation, "パスワードの確認" %>
+            <%= f.password_field :password_confirmation, autofocus: "off", class: "form-control" %>
           </div>
 
           <%= f.submit "変更する", class: "btn btn-primary" %>
