--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,24 +1,24 @@
 <div class="profile-wrap">
   <div class="row">
     <div class="col-md-4 text-center">
-      <%= image_tag avatar_url(@user), class: "round-img" %>
+       <%= image_tag @user.get_profile_photo, class: "round-img" %>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 res-flex">
       <div class="row">
         <h1><%= @user.name %></h1>
         <!--プロフィール編集権限-->
         <% if @user == current_user %>
         <%= link_to "プロフィールを編集", edit_user_path, class: "btn btn-outline-dark common-btn edit-profile-btn" %>
-        <button type="button" class="setting" data-toggle="modal" data-target="#exampleModal"></button>
+        <button type="button" class="setting" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-bars"></i></button>
         <% end %>
         
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">設定</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">×</span>
+                  <span><i class="fa-solid fa-x"></i></span>
                 </button>
               </div>
               <div class="list-group text-center">
@@ -28,6 +28,11 @@
             </div>
           </div>
         </div>
+      </div>
+       <div class="row">
+        <p>
+          bio:<%= @user.introduction %>
+        </p>
       </div>
       <% if @user == current_user %>
         <div class="row">
@@ -39,6 +44,7 @@
     </div>
   </div>
 </div>
+<hr>
 
 <div class="container">
   <div class="row">
