--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>User::Posts#edit</h1>
-<p>Find me in app/views/user/posts/edit.html.erb</p>
+<div class="d-flex flex-column align-items-center mt-3">
+  <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
+    <div class="card">
+      <div class="card-header">
+      <h1>投稿編集画面</h1>
+      </div>
+        <% if @post.errors.any? %>
+        <h3><%= ActionController::Base.helpers.pluralize(@post.errors.count, 'error') %> prohibited this obj from being saved:</h3>
+        <ul>
+        <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+        </ul>
+        <% end %>
+       
+     <div class="card-body">     
+       <%=form_with model: @post do |f| %>
+          
+          <div class="form-group row mt-2">
+            <div class="col-auto pr-0">
+              <%= image_tag current_user.get_profile_photo, class: "post-profile-icon" %>
+            </div>
+            <div class="col pl-0">
+              <%= f.text_field :caption, class: "form-control border-0", placeholder: "キャプションを書く" %>
+            </div>
+          </div>
+          <%= f.submit "編集", class: "btn btn-primary" %>
+          <%= link_to "戻る", post_path(@post), class: "btn btn-dark" %>
+        <% end %>
+         
+      </div>
+     </div>
+  </div>
+</div>
