--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,14 +1,16 @@
-<main class="container-fluid">
+<div class="container">
   <div class="row">
     <!-- サイドバー -->
-    <%= render 'user/users/info', user: current_user %>
+    <aside class="col-md-3 col-12 h-100">
+      <%= render 'user/users/info', user: current_user %>
+    </aside>
     <!-- メインコンテンツ -->
-    <div class="col-md-9">
+    <main class="col-md-9 col-12 mx-auto">
       <div class="container">
         <div class="row">
           <% @posts.each do |post| %>
-            <div class="col-md-3">
-              <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
+            <div class="col-md-3 col-sm-6 col-12">
+              <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 100%;">
                 <%= link_to(post_path(post)) do %>
                   <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
                 <% end %>
@@ -17,6 +19,6 @@
           <% end %>
         </div>
       </div>
-    </div>
+    </main>
   </div>
-</main>
+</div>
