--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -6,12 +6,12 @@
       </div>
       <div class="card-body">
         <%= form_with model: @post, url: posts_path, class: "upload-images p-0 border-0" do |f| %>
-         <div class="mb-3">
+          <div class="mb-3">
 
             <%= f.fields_for :photos do |i| %>
-              <%= i.file_field :image %>
+              <%= i.file_field :image, id: "image-upload", class: "image-upload" %>
             <% end %>
-
+            <div id="image-preview"></div> <!-- 画像プレビュー用のdivを追加 -->
           </div>
           
           <div class="form-group row mt-2">
