--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -9,21 +9,28 @@
   <main class="col-md-9 col-12 mx-auto">
     <div class="card-wrap">
       <div class="card">
-        <div class="card-header align-items-center d-flex">
+       <div class="card-header align-items-center d-flex">
           <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
-             <%= image_tag @post.user.get_profile_photo,class: "post-profile-icon"%>
+            <%= image_tag @post.user.get_profile_photo, class: "post-profile-icon" %>
           <% end %>
-          
-          <%= link_to user_path(@post.user), class: "black-color no-text-decoration",
-            title: @post.user.name do %>
+        
+          <%= link_to user_path(@post.user), class: "black-color no-text-decoration", title: @post.user.name do %>
             <strong><%= @post.user.name %></strong>
           <% end %>
+        
           <% if @post.user_id == current_user.id %>
-           <%= link_to post_path(@post), method: :delete, data: {confirm: "削除しますか？"}, class: "ml-auto mx-0 my-auto" do %>
-            <div class="delete-post-icon">
-                <i class="fa-solid fa-trash"></i>
+            <div class="ml-auto mx-0 my-auto edit-delete-icons">
+              <%= link_to edit_post_path(@post.id), class: "icon-link" do %>
+                <div class="edit-post-icon">
+                  <i class="fa-solid fa-pen-to-square"></i>   
+                </div>
+              <% end %>
+              <%= link_to post_path(@post), method: :delete, data: {confirm: "削除しますか？"}, class: "icon-link" do %>
+                <div class="delete-post-icon">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              <% end %>
             </div>
-           <% end %>
           <% end %>
         </div>
 
@@ -35,7 +42,7 @@
             <%= link_to "", "#", class: "comment" %>
           </div>
           <div>
-            <strong>「いいね！」10件</strong>
+            <strong><%= render "user/favorites/favorite", post: @post %></strong>
           </div>
           <div>
             <span><strong><%= @post.user.name %></strong></span>
