--- a/app/views/user/users/_info.html.erb
+++ b/app/views/user/users/_info.html.erb
@@ -2,7 +2,7 @@
 
 <div class="card-wrap">
   <div class="card">
-      <div class="sidebar bg-light" style="padding: 10px; border-radius: 5px;">
+      <div class="sidebar bg-light text-center" style="padding: 10px; border-radius: 5px;">
         <table class='table'>
           <tr><%= image_tag user.get_profile_photo, class: "round-img" %></tr>
           <tr>
