--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -12,7 +12,7 @@
         <button type="button" class="setting" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-bars"></i></button>
         <% end %>
         
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
