admin機能ユーザ〜投稿

--- a/app/javascript/stylesheets/common.scss
+++ b/app/javascript/stylesheets/common.scss
@@ -2,6 +2,9 @@ body {
   background-color: #f5f5f5;
   font-size: 14px;
   color: #262626;
+  font-family: Gellix, sans-serif;
+  font-size: 1rem;
+  line-height: 1.67;
 }
 
 
