--- a/app/views/user/homes/example.html.erb
+++ b/app/views/user/homes/example.html.erb
@@ -1,17 +1,16 @@
-<div class="container b-top-img">
 <div class="main-wrapper">
   <div class="top section">
     <div class="container b-top">
         <div class="stack-24">
             <h1 class="width-max-960 h1-top">
-                <span class="callout">My-Terior</span><br>
-                あなたのアイデアが誰かの人生に<br>
-                インテリアの楽しさをシェアしましょう
+                <span class="callout">My-Terior</span>
+                "あなたのアイデアが誰かの人生に"<br>
+                "~インテリアの楽しさを~"
             </h1>
             <p>
-                ここは,My(私)とIn(terior)の出会いの場
+                "ここは,My(私)とIn(terior)の出会いの場"
             <br>
-                として、インテリアを共有、発見できるプラットフォームです
+                "として、インテリアを共有、発見できるプラットフォームです"
             </p>
         </div>
       <div class="w-layout">
@@ -30,6 +29,7 @@
          <% end %>
       </div>
     </div>
+    <div class="container b-top-img">
+    </div>
   </div>
-</div>
 </div>
