--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,42 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<div class="profile-wrap">
+  <div class="row">
+    <div class="col-md-4 text-center">
+       <%= image_tag @user.get_profile_photo, class: "round-img" %>
+    </div>
+    <div class="col-md-8 res-flex">
+      <div class="row">
+        <h1><%= @user.name %></h1>
+        <!--プロフィール編集権限-->
+        <%= link_to "プロフィールを編集", edit_admin_user_path, class: "btn btn-outline-dark common-btn edit-profile-btn" %>
+      </div>
+       <div class="row">
+        <p>
+          bio:<%= @user.introduction %>
+        </p>
+      </div>
+      <% if @user == current_user %>
+        <div class="row">
+          <p>
+            <%= @user.email %>
+          </p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+<hr>
+
+<div class="container">
+  <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-md-3">
+            <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
+              <%= link_to admin_post_path(post) do %>
+              <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
+              <% end %>
+            </div>
+          </div>
+         <% end %>
+      </div>
+    </div>
+
