--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,7 +1,12 @@
 <div class="container">
+  <% if flash[:error] %>
+  <div class="error-message">
+    <%= flash[:error] %>
+  </div>
+<% end %>
    <div class="row">
     <!-- サイドバー -->
-  <aside class="col-md-3 col-12">
+  <aside class="col-md-3 col-12 h-100">
      <%= render 'user/users/info', user: current_user %>
   </aside>
   
@@ -12,10 +17,18 @@
        <div class="card-header align-items-center d-flex">
           <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
             <%= image_tag @post.user.get_profile_photo, class: "post-profile-icon" %>
-          <% end %>
-        
+          <% end %> 
+          
           <%= link_to user_path(@post.user), class: "black-color no-text-decoration", title: @post.user.name do %>
             <strong><%= @post.user.name %></strong>
+          <% end %>
+          
+           <% if current_user != @post.user %>
+              <% if current_user.following?(@post.user) %>
+                <%= link_to "フォロー外す", user_relathionships_path(@post.user.id), method: :delete %>
+              <% else %>
+                <%= link_to "フォローする", user_relathionships_path(@post.user.id), method: :post%>
+              <% end %>
           <% end %>
         
           <% if @post.user_id == current_user.id %>
