DM機能追加完了

--- a/app/javascript/stylesheets/users/devise.scss
+++ b/app/javascript/stylesheets/users/devise.scss
@@ -59,6 +59,10 @@ footer {
   color: #6c757d; /* グレーのテキスト色 */
 }
 
+.follow-btn{
+  padding: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .main {
     padding: 75px 0;
