--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -45,6 +45,12 @@
       </li>
     <% elsif user_signed_in? %>
       <li class="nav-item">
+        <% if user_signed_in? %>
+          <%= link_to "投稿", new_post_path, class: 'nav-link text-dark' %>
+        <% end %>
+      </li>
+      
+      <li class="nav-item">
         <%= link_to user_path(current_user), class: 'nav-link text-dark' do %>
           マイページ
         <% end %>
@@ -55,7 +61,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "#", class: 'nav-link text-dark' do %>
+        <%= link_to rooms_path, class: 'nav-link text-dark' do %>
           チャット
         <% end %>
       </li>
