--- a/app/views/user/users/_info.html.erb
+++ b/app/views/user/users/_info.html.erb
@@ -32,9 +32,7 @@
           <tr>
             <th></th>
       	    <td>
-      	     <% if user_signed_in? %>
-               <%= link_to "投稿", new_post_path, class: 'btn btn-success' %>
-             <% end %>
+      	     <!--フォローボタン-->
       	    </td>
           </tr>
         </table>
