--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -29,7 +29,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "#", class: 'nav-link text-dark' do %>
+        <%= link_to admin_posts_path, class: 'nav-link text-dark' do %>
           投稿管理
         <% end %>
       </li>
@@ -65,11 +65,11 @@
           チャット
         <% end %>
       </li>
-      <li class="nav-item">
-        <%= link_to "#", class: 'nav-link text-dark' do %>
-          通知
-        <% end %>
-      </li>
+      <!--<li class="nav-item">-->
+      <!--  <%#= link_to "#", class: 'nav-link text-dark' do %>-->
+      <!--    通知-->
+      <!--  <%# end %>-->
+      <!--</li>-->
       <li class="nav-item">
         <%= link_to favorites_path, class: 'nav-link text-dark' do %>
           いいね一覧
