検索機能途中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,6 @@
    <%= render 'partial/navbar' %>
    <%= flash[:notice] %>
    <%= yield %>
-   
+   <%= render 'partial/footer' %>
   </body>
 </html>
