--- a/app/javascript/stylesheets/layouts/navbar.scss
+++ b/app/javascript/stylesheets/layouts/navbar.scss
@@ -34,5 +34,45 @@
       
     }
   }
+  
+  .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* ドロップダウンボタンのスタイル */
+.dropbtn {
+  background-color: #fff;
+  color: #333;
+  padding: 8px 16px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+/* ドロップダウンコンテンツ (隠されている) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* ドロップダウンコンテンツのスタイル */
+.dropdown-content .dropdown-select {
+  display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  border: none;
+  width: 100%;
+}
+
+/* ドロップダウンボタンにホバーしたときに表示 */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 }
