--- a/app/javascript/stylesheets/users/show.scss
+++ b/app/javascript/stylesheets/users/show.scss
@@ -4,8 +4,9 @@
 
 .round-img {
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
+  margin: 5px;
 }
 
 .edit-profile-btn {
