--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,9 +1,10 @@
 <% if obj.errors.any? %>
-  <div class="alert alert-danger">
-    <h3><%= obj.errors.count %> 件のエラーが発生しました</h3>
-    <ul class="list-unstyled">
+  <div class="alert alert-danger" role="alert">
+    <h4 class="alert-heading"><%= obj.errors.count %> 件のエラーが発生しました</h4>
+    <hr>
+    <ul class="list-unstyled mb-0">
       <% obj.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li><i class="fas fa-exclamation-circle"></i> <%= message %></li>
       <% end %>
     </ul>
   </div>
