--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -17,11 +17,14 @@
        <%=form_with model: @post do |f| %>
           
           <div class="form-group row mt-2">
-            <div class="col-auto pr-0">
-              <%= image_tag current_user.get_profile_photo, class: "post-profile-icon" %>
-            </div>
             <div class="col pl-0">
               <%= f.text_field :caption, class: "form-control border-0", placeholder: "キャプションを書く" %>
+            </div>
+          </div>
+          <div class="form-group row mt-2">
+            <div class="col-auto pr-0">
+              間取り：
+              <%= f.select :genre_id, options_for_select(Genre.all.map{ |genre| [genre.name, genre.id] }), { prompt: "該当の間取りを選択してください" }, { class: "form-control", name: "post[genre_id]" } %>
             </div>
           </div>
           <%= f.submit "編集", class: "btn btn-primary" %>
